k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fib-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fibonacci
  template:
    metadata:
      labels:
        app: fibonacci
    spec:
      containers:
      - name: fib-container
        image: vaspapts/fibonacci:new-flask
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: fib-service
spec:
  selector:
    app: fib-deployment
  ports:
  - port: 6000
    targetPort: 5000
  type: NodePort
