k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fib-ingress
  annotations:
    kubernetes.io/ingress.class: nginx # Replace with your Ingress controller's class
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fib-service
                port:
                  number: 80
